# quicklaunch

./: AGENTS.md  Cargo.toml  README.md  config.example.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: bookmarks-plugin.py
src/: apps.rs  config.rs  entry.rs  executor.rs  gpu_search.rs  kde.rs  launch.rs  main.rs  providers.rs  resident.rs  search.rs  single.rs  style.rs  theme.rs  ui.rs  usage.rs
