[package]
name = "quicklaunch"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["tokio", "advanced", "svg", "image"] }
iced_layershell = "0.18"
iced_runtime = "0.14"
freedesktop-desktop-entry = "0.8"
nucleo-matcher = "0.3"
freedesktop-icons = "0.4"
dirs = "6.0.0"
serde = { version = "1", features = ["derive"] }
toml = "1.1.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
