[package]
name = "quicklaunch"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", default-features = false, features = ["tokio", "advanced", "svg", "image-without-codecs", "wgpu", "wayland"] }
iced_layershell = { version = "0.18", default-features = false }
iced_runtime = "0.14"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
freedesktop-desktop-entry = "0.8"
nucleo-matcher = "0.3"
freedesktop-icons = "0.4"
dirs = "6.0.0"
serde = { version = "1", features = ["derive"] }
toml = "1.1.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
